--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 AE_BINARY=/Applications/Adobe After Effects 2023/aerender
 SCRIPT_PATH=/Users/taylor/src/github/aenode/ae/script.jsx
+DATA_PATH=/Users/taylor/src/github/aenode/ae/data
